--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "test": "mocha --require ts-node/register test/**/*.ts",
     "lint": "tslint -p tsconfig.json -c tslint.json"
   },
-
   "engines": {
     "node": "8.9.3"
   },
@@ -28,7 +27,7 @@
     "express-validator": "5.3.1",
     "http-status-codes": "1.3.2",
     "jsonwebtoken": "^8.4.0",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.14",
     "mongoose": "^5.4.3",
     "mongoose-paginate": "5.0.3",
     "nodemailer": "6.2.1",
